# mcp-slack

./: .env.example  CLAUDE.md  Cargo.toml  README.en.md  README.md
.github/workflows/: lint.yml  test.yml
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/cache/: channels.rs  error.rs  helpers.rs  locks.rs  mod.rs  schema.rs  sqlite_cache.rs  users.rs
src/mcp/: handlers.rs  server.rs  types.rs
src/slack/: channels.rs  core.rs  messages.rs  types.rs  users.rs
src/tools/: cache.rs  message_utils.rs  messages.rs  mod.rs  response.rs  search.rs
